Fixes scroll and resize problem on mobile.

--- a/css/clear-days.css
+++ b/css/clear-days.css
@@ -40,6 +40,7 @@ body {
     background-color: var(--color-background-page);
     border-top: 1px var(--color-border-primary) solid;
     border-right: 0px;
+    overflow: visible;
 }
 
 .space-canvas-container {
@@ -67,7 +68,7 @@ canvas.plot-canvas {
     border-radius: 0px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (orientation: landscape) {
     .page-layout {
         flex-direction: row;
     }
@@ -77,6 +78,7 @@ canvas.plot-canvas {
         height: 100vh;
         border-top: 0px;
         border-right: 1px var(--color-border-primary) solid;
+        overflow: auto;
     }
 
     .space-canvas-container {
